<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="9dp"
        app:cardElevation="3dp"
        android:padding="6dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="5dp"
>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp" tools:layout_editor_absoluteY="16dp" tools:layout_editor_absoluteX="64dp">
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/dateMatch"
                  android:gravity="center_horizontal"
                  android:text="@string/tanggal_pertandingan"
                  android:layout_gravity="center_horizontal"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:gravity="center">
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/club_team_home"
                      android:id="@+id/homeTeams"

                      android:textStyle="bold"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/scoreHome"

                    android:layout_marginStart="10dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vs"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/scoreAway"
                    android:layout_marginStart="20dp"

            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/club_team_away"
                    android:textStyle="bold"
                    android:id="@+id/awayTeams"
                    android:layout_marginStart="20dp"/>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>