<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.DetailActivity"
        android:orientation="vertical"
>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:visibility="invisible"
                  android:id="@+id/linearLayout"
                  android:orientation="vertical">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:gravity="center"
                android:layout_marginTop="5dp">

            <ImageView
                    android:contentDescription="@string/match"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/imgViewHome"/>
            <TextView
                    android:text="@string/kosong"
                    android:id="@+id/scoreHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"/>
            <TextView
                    android:text="@string/vs"
                    android:id="@+id/txtVS"

                    android:layout_marginStart="3dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:text="@string/kosong"
                    android:id="@+id/scoreAway"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"/>
            <ImageView
                    android:id="@+id/imgAway"
                    android:layout_width="100dp"
                    android:layout_gravity="end"

                    android:layout_height="100dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="match_parent">
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:background="#f4f4f4"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="8dp"
                    android:elevation="8dp">
                <TextView
                        android:text="@string/detail_pertandingan"
                        android:gravity="center"

                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                />
                <TextView
                        android:text="@string/kosong"
                        android:id="@+id/namaTeamsBertanding"
                        android:layout_marginTop="30dp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#f4f4f4"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="8dp"
                    android:elevation="8dp">
                <TextView
                        android:id="@+id/goalHome"
                        android:text="@string/kosong"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                />
                <TextView
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/goals"/>
                <TextView
                        android:text="@string/kosong"
                        android:textStyle="bold"
                        android:id="@+id/goalAway"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:layout_width="131dp"
                        android:layout_height="wrap_content"/>

            </android.support.v7.widget.CardView>
        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#f4f4f4"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="8dp"
                    android:elevation="8dp">
                <TextView
                        android:id="@+id/kiperHome"
                        android:text="@string/kosong"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_width="131dp"
                        android:layout_height="wrap_content"
                />
                <TextView
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kiper"/>
                <TextView
                        android:text="@string/kosong"
                        android:textStyle="bold"
                        android:id="@+id/kiperAway"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:layout_width="134dp"
                        android:layout_height="wrap_content"/>

            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#f4f4f4"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="8dp"
                    android:elevation="8dp">
                <TextView
                        android:text="@string/kosong"
                        android:textStyle="bold"
                        android:id="@+id/bekHome"
                        android:gravity="center"
                        android:layout_width="133dp"
                        android:layout_height="wrap_content"
                />
                <TextView
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bek"/>
                <TextView
                        android:text="@string/kosong"
                        android:textStyle="bold"
                        android:layout_gravity="end"
                        android:id="@+id/bekAway"
                        android:gravity="end"
                        android:layout_width="131dp"
                        android:layout_height="wrap_content"/>

            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#f4f4f4"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="8dp"
                    android:elevation="8dp">
                <TextView
                        android:text="@string/kosong"
                        android:textStyle="bold"
                        android:id="@+id/gelandangHome"
                        android:gravity="center"
                        android:layout_width="131dp"
                        android:layout_height="wrap_content"
                />
                <TextView
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gelandang"/>
                <TextView
                        android:text="@string/kosong"
                        android:textStyle="bold"
                        android:layout_gravity="end"
                        android:id="@+id/gelandangAway"
                        android:gravity="end"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"/>

            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#f4f4f4"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="8dp"
                    android:elevation="8dp">
                <TextView
                        android:text="@string/kosong"
                        android:textStyle="bold"
                        android:id="@+id/penyerangHome"
                        android:gravity="center"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                />
                <TextView

                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/penyerang"/>
                <TextView
                        android:text="@string/kosong"
                        android:textStyle="bold"
                        android:id="@+id/penyerangAway"
                        android:gravity="end"
                        android:layout_gravity="end"
                        android:layout_width="126dp"
                        android:layout_height="wrap_content"/>

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
    <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/progressDetail"
    />
</LinearLayout>